--- a/package.json
+++ b/package.json
@@ -181,11 +181,5 @@
     "typescript": "^5.9.3",
     "wrangler": "^4.56.0"
   },
-  "private": true,
-  "resolutions": {
-    "@react-navigation/native": "7.1.24",
-    "@react-navigation/native-stack": "7.9.0",
-    "@react-navigation/core": "7.13.5",
-    "@react-navigation/elements": "2.9.1"
-  }
+  "private": true
 }
