--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "diff": "^8.0.2",
     "expo": "^54.0.31",
     "expo-application": "~7.0.8",
+    "expo-build-properties": "~0.14.7",
     "expo-asset": "~12.0.12",
     "expo-audio": "~1.1.1",
     "expo-battery": "~10.0.8",
@@ -159,6 +160,7 @@
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screen-transitions": "^3.2.1",
     "react-native-screens": "~4.19.0",
+    "react-native-ssl-public-key-pinning": "^1.3.2",
     "react-native-svg": "15.15.1",
     "react-native-typography": "^1.4.1",
     "react-native-unistyles": "^3.0.21",
